position abs. rel. overflow bugfix

--- a/src/styling/App.scss
+++ b/src/styling/App.scss
@@ -32,6 +32,7 @@ body {
 
 #root {
   margin: 0 auto;
+  overflow-x :hidden;
 }
 
 @media screen and (min-width: 768px) {
